--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 log = "0.4.17"
 simple_logger = "4.0.0"
 tokio = { version = "1", features = ["full"] }
-queues = "1.0.2"
+nom = "7.1.3"
