--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ log = "0.4.17"
 simple_logger = "4.0.0"
 tokio = { version = "1", features = ["full"] }
 nom = "7.1.3"
+async-trait = "0.1.64"
+clap = { version = "4.1.6", features = ["derive"]  }
